--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,4 +5,5 @@ $accent: #FFA300;
 $blue: #70D3FA;
 
 // MARGIN / GAPS
-$container-gap: 275px;
+$container-vertical: 25px;
+$container-horizontal: 275px;
