--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,10 +1,13 @@
 nav {
   ul {
+    align-self: center;
+    padding: 0;
     display: flex;
     flex-direction: row;
 
     li {
       font-size: 16px;
+      align-self: center;
       list-style: none;
       padding: 0 15px 0 0;
 
