--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import './styles/components/_app.scss';
+@import './styles/components/_global.scss';
 @import './styles/components/_header.scss';
 @import './styles/components/_main.scss';
 @import './styles/components/_hero.scss';
