--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -48,3 +48,11 @@ footer {
 
 
 }
+
+div.footer--bottom {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
