--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -3,12 +3,16 @@ div.hero {
     height: 400px;
     background: url('../../images/Miami-Street-view.crop_.jpg');
     background-position: center;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
+    position: relative; 
 
     .hero--inner {
         margin: 0 $container-horizontal; 
         background-color: $accent;
-
+        position: absolute; 
+        bottom: 0;
+        opacity: 90%;
         width: 50%;
         text-align: left;
         padding: 10px 25px;
