--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&family=Roboto&display=swap");
 .App {
   text-align: center;
 }
@@ -124,6 +125,17 @@ main div.main--text-model {
   margin: 0 0 100px 0;
 }
 
+main div.main--text-model h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+}
+
+main div.main--text-model p {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+}
+
 div.hero {
   width: 100%;
   height: 400px;
@@ -131,11 +143,15 @@ div.hero {
   background-position: center;
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 div.hero .hero--inner {
   margin: 0 275px;
   background-color: #FFA300;
+  position: absolute;
+  bottom: 0;
+  opacity: 90%;
   width: 50%;
   text-align: left;
   padding: 10px 25px;
@@ -240,5 +256,20 @@ footer .footer--left ul {
 footer .footer--left ul li {
   padding-bottom: 25px;
   list-style: none;
+}
+
+div.footer--bottom {
+  padding: 0;
+  margin: 0 275px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
