--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -5,7 +5,12 @@ main {
     div.main--text-model {
         margin: 0 0 ($container-vertical * 4) 0;
 
-        h1 {
+        h1, 
+        h2, 
+        h3, 
+        h4, 
+        h5, 
+        h6 {
             @include heading-text;
         }
 
